--- a/src/app/layout/layouts/horizontal/modern/modern.component.html
+++ b/src/app/layout/layouts/horizontal/modern/modern.component.html
@@ -65,8 +65,8 @@
         <div class="ml-auto flex items-center space-x-0.5 pl-2 sm:space-x-2">
             <!-- <languages></languages> -->
             <fuse-fullscreen class="hidden md:block"></fuse-fullscreen>
-            <search [appearance]="'bar'"></search>
-            <shortcuts></shortcuts>
+            <!-- <search [appearance]="'bar'"></search>
+            <shortcuts></shortcuts> -->
             <!-- <messages></messages> -->
             <notifications></notifications>
             <panier></panier>
