--- a/src/app/modules/admin/dashboards/commandes/commandes-pdf/commandes-pdf.component.html
+++ b/src/app/modules/admin/dashboards/commandes/commandes-pdf/commandes-pdf.component.html
@@ -13,7 +13,7 @@
                     </div>
                 </div>
                 <div class="flex flex-col items-end">
-                    <img class="w-24" src="images/logo/invoice_logo.JPG" alt="SMG logo">
+                    <img class="w-24" src="images/logo/invoice_logo.png" alt="SMG logo">
                     <div>RUE AHMED ESSIKILLI IMM. ANBRA NUM 3</div>
                     <div>3027 - SFAX - TUNISIE</div>
                 </div>
