--- a/src/app/modules/admin/dashboards/factures/factures-pdf/factures-pdf.component.html
+++ b/src/app/modules/admin/dashboards/factures/factures-pdf/factures-pdf.component.html
@@ -225,7 +225,7 @@
                             </div>
                         </div>
                         <div class="place-self-middle w-40">
-                            <img class="w-full" src="images/logo/invoice_logo.JPG"
+                            <img class="w-full" src="images/logo/invoice_logo.png"
                                 style="margin-left: 20%; margin-top: 50%" />
                         </div>
                     </div>
