--- a/src/app/modules/admin/pages/profile/profile.component.html
+++ b/src/app/modules/admin/pages/profile/profile.component.html
@@ -117,6 +117,7 @@
                         <span class="leading-none">{{currentUser.tel1}}</span>
                     </div>
                     }
+                    @if(currentUser.tel2){
                     <div class="mt-4 flex items-center">
                         <mat-icon
                             class="mr-3 icon-size-5"
@@ -124,6 +125,7 @@
                         ></mat-icon>
                         <span class="leading-none">{{currentUser.tel2}}</span>
                     </div>
+                }
                 </div>
                 <a
                     class="mt-8 px-6"
