--- a/src/app/layout/layouts/vertical/dense/dense.component.html
+++ b/src/app/layout/layouts/vertical/dense/dense.component.html
@@ -3,7 +3,7 @@
 
 <!-- Navigation -->
 <fuse-vertical-navigation
-    class="bg-white print:hidden"
+    class="bg-dark print:hidden"
     [appearance]="navigationAppearance"
     [mode]="isScreenSmall ? 'over' : 'side'"
     [name]="'mainNavigation'"
@@ -48,8 +48,8 @@
         <div class="ml-auto flex items-center space-x-0.5 pl-2 sm:space-x-2">
             <!--<languages></languages>-->
             <fuse-fullscreen class="hidden md:block"></fuse-fullscreen>
-            <search [appearance]="'bar'"></search>
-            <shortcuts></shortcuts>
+            <!-- <search [appearance]="'bar'"></search>
+            <shortcuts></shortcuts> -->
             <!--<messages></messages>-->
             <notifications></notifications>
             <panier></panier>
