--- a/src/app/modules/admin/dashboards/articles/details/details.component.html
+++ b/src/app/modules/admin/dashboards/articles/details/details.component.html
@@ -1,6 +1,7 @@
 <div class="flex w-full flex-col">
     <!-- Header -->
     <div class="relative h-40 w-full bg-accent-100 px-8 dark:bg-accent-700 sm:h-48 sm:px-12">
+        <img class="absolute inset-0 h-full w-full object-contain" [src]="logoPath"/>
         <div class="mx-auto flex w-full max-w-3xl items-center justify-end pt-6">
             <a mat-icon-button [matTooltip]="'Fermer'" [routerLink]="['../']">
                 <mat-icon class="text-black" [svgIcon]="'heroicons_outline:x-mark'"></mat-icon>
@@ -11,6 +12,7 @@
     <!-- Détails de l'Article -->
     <div class="relative flex flex-auto flex-col items-center p-6 pt-0 sm:p-12 sm:pt-0">
         <div class="w-full max-w-3xl">
+            
             <!-- Nom de l'Article -->
             <div class="mt-3 truncate text-4xl font-bold">
                 {{ article.reference }}
