--- a/src/app/modules/admin/dashboards/articles/details/details.component.html
+++ b/src/app/modules/admin/dashboards/articles/details/details.component.html
@@ -44,6 +44,9 @@
                     <button mat-raised-button color="primary" class="ml-4" (click)="addToCart()" [disabled]="!quantity || quantity > article.stock">
                         Ajouter au Panier
                     </button>
+                    <button mat-raised-button color="accent" class="ml-4" (click)="equivalents()">
+                        Équivalents
+                    </button>
                 </div>
             </div>
         </div>
