--- a/src/app/modules/admin/dashboards/contacts/details/details.component.html
+++ b/src/app/modules/admin/dashboards/contacts/details/details.component.html
@@ -5,14 +5,6 @@
         <div
             class="relative h-40 w-full bg-accent-100 px-8 dark:bg-accent-700 sm:h-48 sm:px-12"
         >
-            <!-- Background -->
-            <!-- @if (contact.background) {
-                <img
-                    class="absolute inset-0 h-full w-full object-cover"
-                    [src]="contact.background"
-                />
-            } -->
-            <!-- Close button -->
             <div
                 class="mx-auto flex w-full max-w-3xl items-center justify-end pt-6"
             >
@@ -73,33 +65,12 @@
                 <div class="mt-3 truncate text-4xl font-bold">
                     {{ contact.nom }}
                 </div>
-
-                <!-- Tags -->
-                <!-- @if (contact.tags.length) {
-                    <div class="mt-2 flex flex-wrap items-center"> -->
-                        <!-- Tag -->
-                        <!-- @for (
-                            tag of contact.tags | fuseFindByKey: 'id' : tags;
-                            track trackByFn($index, tag)
-                        ) {
-                            <div
-                                class="mb-3 mr-3 flex items-center justify-center rounded-full bg-gray-100 px-3 py-1 leading-normal text-gray-500 dark:bg-gray-700 dark:text-gray-300"
-                            >
-                                <span
-                                    class="whitespace-nowrap text-sm font-medium"
-                                    >{{ tag.title }}</span
-                                >
-                            </div>
-                        }
-                    </div> -->
-                <!-- } -->
-
                 <div class="mt-4 flex flex-col space-y-8 border-t pt-6">
                     <!-- Title -->
                     @if (contact.banque) {
                         <div class="flex sm:items-center">
                             <mat-icon
-                                [svgIcon]="'heroicons_outline:office-building'"
+                                [svgIcon]="'heroicons_outline:building-library'"
                             ></mat-icon>
                             <div class="ml-6 leading-6">
                                 {{ contact.banque }}
@@ -136,16 +107,6 @@
                                         >
                                             {{ contact.email }}
                                         </a>
-                                        <!-- @if (email.label) {
-                                            <div
-                                                class="text-secondary truncate text-md"
-                                            >
-                                                <span class="mx-2">&bull;</span>
-                                                <span class="font-medium">{{
-                                                    email.label
-                                                }}</span>
-                                            </div>
-                                        } -->
                                     </div>
                             </div>
                         </div>
@@ -158,50 +119,11 @@
                                 [svgIcon]="'heroicons_outline:phone'"
                             ></mat-icon>
                             <div class="ml-6 min-w-0 space-y-1">
-                                <!-- @for (
-                                    phoneNumber of contact.phoneNumbers;
-                                    track trackByFn($index, phoneNumber)
-                                ) { -->
                                     <div class="flex items-center leading-6">
-                                        <!-- <div
-                                            class="hidden h-4 w-6 overflow-hidden sm:flex"
-                                            [matTooltip]="
-                                                getCountryByIso(
-                                                    phoneNumber.country
-                                                ).name
-                                            "
-                                            [style.background]="
-                                                'url(\'/images/apps/contacts/flags.png\') no-repeat 0 0'
-                                            "
-                                            [style.backgroundSize]="
-                                                '24px 3876px'
-                                            "
-                                            [style.backgroundPosition]="
-                                                getCountryByIso(
-                                                    phoneNumber.country
-                                                ).flagImagePos
-                                            "
-                                        ></div> -->
-                                        <!-- <div class="font-mono sm:ml-3">
-                                            {{
-                                                getCountryByIso(
-                                                    phoneNumber.country
-                                                ).code
-                                            }}
-                                        </div> -->
                                         <div class="ml-2.5 font-mono">
                                             {{ contact.tel1 }}
                                         </div>
-                                        <!-- @if (phoneNumber.label) {
-                                            <div
-                                                class="text-secondary truncate text-md"
-                                            >
-                                                <span class="mx-2">&bull;</span>
-                                                <span class="font-medium">{{
-                                                    phoneNumber.label
-                                                }}</span>
-                                            </div>
-                                        } -->
+
                                     </div>
                                     <div class="flex items-center leading-6">
                                         <div class="ml-2.5 font-mono">
@@ -243,32 +165,23 @@
                         </div>
                     }
 
-                    <!-- Birthday -->
-                    <!-- @if (contact.birthday) {
+                    <!-- Matricule fiscale-->
+                    @if (contact.idfiscal) {
                         <div class="flex sm:items-center">
                             <mat-icon
-                                [svgIcon]="'heroicons_outline:cake'"
+                                [svgIcon]="'heroicons_outline:identification'"
                             ></mat-icon>
                             <div class="ml-6 leading-6">
-                                {{ contact.birthday | date: 'longDate' }}
+                                {{ contact.idfiscal }}
                             </div>
                         </div>
-                    } -->
+                    }
 
-                    <!-- Notes -->
-                    <!-- @if (contact.notes) {
-                        <div class="flex">
-                            <mat-icon
-                                [svgIcon]="
-                                    'heroicons_outline:bars-3-bottom-left'
-                                "
-                            ></mat-icon>
-                            <div
-                                class="prose prose-sm ml-6 max-w-none"
-                                [innerHTML]="contact.notes"
-                            ></div>
-                        </div>
-                    } -->
+                    <!-- Matricule image -->
+                    @if(imageData){
+                        <span class="text-sm font-medium text-gray-500 dark:text-gray-400">Matricule Fiscale: </span>
+                        <img [src]="imageData" alt="Profile Picture" class="img-fluid profile-picture rounded-circle">
+                    }
                 </div>
             </div>
         </div>
